jupyter notebook saved

--- a/answers.ipynb
+++ b/answers.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Demultiplexing and Index Swapping\n",
     "\n",
-    "**Quality score distribution per nucleotide**\n",
+    "## Part 1: Quality score distribution per nucleotide\n",
     "\n",
     "Determine which files contain the indexes, and which contain the paired end reads\n",
     "containing the biological data of interest. Create a table and label each file with either\n",
@@ -211,12 +211,12 @@
     "        # open file3: Index 2\n",
     "            # open file4: Read 2 (R)\n",
     "                # Loop: while True (will be false once end of file is reached)\n",
-    "                    # index1.readline() method for the 4 lines of Index1 file, store the actual index (the first line) as a variable called Index1\n",
+    "                    # index1.readline() method for each of the 4 lines of Index1 file, store the actual index (the first line) as a variable called Index1\n",
     "                    # If the first line == \"\": the end of the file has been reached\n",
     "                        # break\n",
-    "                    # read1.readline() method for the 4 lines of Read1 file, store all 4 lines as variables\n",
-    "                    # index2.readline() method for the 4 lines of Index2 file, store the actual index as a variable called Index2\n",
-    "                    # read2.readline() method for the 4 lines of Read2 file, store all 4 lines as variables \n",
+    "                    # read1.readline() method for each of the 4 lines of Read1 file, store all 4 lines as variables\n",
+    "                    # index2.readline() method for each of the 4 lines of Index2 file, store the actual index as a variable called Index2\n",
+    "                    # read2.readline() method for each of the 4 lines of Read2 file, store all 4 lines as variables \n",
     "                    # reverseCompIndex1 = reverse_complement(Index1)\n",
     "                    # If reverseCompIndex1 == Index2, no index hopping has occurred \n",
     "                        # Open the file corresponding to index1 as \"a\" (append, so overwriting does not occur)\n",
@@ -237,20 +237,6 @@
     "# divide number of hopped reads by total reads, mulitply by 100 to get percentage of hopped reads\n",
     "# iterate over good reads dictionary to print out index and number of good reads for that index "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Develop an algorithm to de-multiplex the samples**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
